# baseline_classify

./: .gitignore
EEG-DG-main/: main_BCI_IV_2a_2source.py
EEGEncoder-main/: README.md  main.py  preprocess.py
Graph-CSPNet-main/: README.md  check_setup.py  generate_indices.py
Graph-CSPNet-main/utils/: model.py  modules.py
Reinforcement_learning/AlphaZero-master/: .gitignore  README.md  pyproject.toml
Reinforcement_learning/AlphaZero-master/scripts/: CHESS_QUICK_START.sh  example_quick_train.sh  example_train_connect4.sh  quick_test_uv.sh  setup_uv.sh
Reinforcement_learning/AlphaZero-master/src/: __init__.py
Reinforcement_learning/AlphaZero-master/src/core/: __init__.py  game.py  mcts.py  neural_network.py  self_play.py
Reinforcement_learning/AlphaZero-master/src/evaluation/: __init__.py  elo_rating.py  evaluate_elo.py  play.py  utils.py
Reinforcement_learning/AlphaZero-master/src/games/: __init__.py  chess_game.py  connect4.py
Reinforcement_learning/AlphaZero-master/src/training/: __init__.py  coach.py  config.py  main.py  train_chess.py
Reinforcement_learning/AlphaZero-master/tests/: __init__.py  test_all.py  test_installation.py
TCFormer-main/: README.md  requirements.txt  train_pipeline.py
TCFormer-main/datamodules/: bcic4_2a.py  bcic4_2b.py  hgd.py
TCFormer-main/utils/: load_bcic4.py  load_hgd.py
TCFormerCustom/: __init__.py  requirements.txt  train_pipeline.py
TCFormerCustom/utils/: load_hgd.py  (+3 more)
VTransformer_1128/: AGENTS.md  README.md  dataloader_v5_1.py  euclidean_alignment.py  models_lite_gnnt_v5_1.py  train_v5_1.py  trainer_v5_1.py
(+188 files in other folders)
